--- a/app.json
+++ b/app.json
@@ -16,19 +16,23 @@
     "env": {
         "API_ID":{
             "description": "Get your telegram API ID from https://my.telegram.org",
-            "value":""
+            "value":"20088962"
         },
         "API_HASH":{
             "description":"Get your telegram API HASH from https://my.telegram.org",
-		    "value":""
+		    "value":"257f47d347157555890a64b12bc0134f"
         },
         "BOT_TOKEN":{
             "description":"Get from BotFather",
-            "value":""
+            "value":"6654605912:AAFy2Js6kiwUq1a18pt3O5zPReCAHEw9XPE"
         },
         "AUTH_USERS":{
             "description":"Admin/Owner/Friends ID Seperate by ','  Ex: 44578878,8878899",
-            "value":""
-        }
+            "value":"6169016546"
+	},
+        "GROUPS":{
+            "description": "Get your telegram GROUP from https://my.telegram.org",
+            "value":"-1004008382140"
+	}
     }
 }
