--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pyrogram==2.0.106
 tgcrypto
 requests
-pyromod==1.4
+pyromod==1.5
 yt-dlp
 ffmpeg
 lxml
 bs4
-aiohttp
+aiohttp==3.9.0
 aiofiles
 asyncio
 pycurl
